--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -249,7 +249,7 @@
                       </figcaption>
                     </div>
 
-                    <video id="eicw-vid1" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <video id="eicw-vid1" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                       <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -284,7 +284,7 @@
                       </figcaption>
                     </div>
 
-                    <video id="eicw-vid2" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <video id="eicw-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                       <source src="../../img/eicw/eicw-vid2-light.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -334,7 +334,7 @@
                       </figcaption>
                     </div>
 
-                    <video id="eicw-vid3" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <video id="eicw-vid3" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                       <source src="../../img/eicw/eicw-vid3-light.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -371,7 +371,7 @@
                       </figcaption>
                     </div>
 
-                    <video id="eicw-vid4" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <video id="eicw-vid4" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                       <source src="../../img/eicw/eicw-vid4-light.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -425,12 +425,12 @@
                     </div>
                   </div>
 
-                  <video id="eicw-vid5" autoplay muted loop playsinline width="100%" class="column-vid">
+                  <video id="eicw-vid5" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                     <source src="../../img/eicw/eicw-vid5-light.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
 
-                  <video id="eicw-vid6" autoplay muted loop playsinline width="100%" class="column-vid">
+                  <video id="eicw-vid6" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                     <source src="../../img/eicw/eicw-vid6-light.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
@@ -469,7 +469,7 @@
                     </div>
                   </div>
 
-                  <video id="eicw-vid7" autoplay muted loop playsinline width="100%" class="column-vid">
+                  <video id="eicw-vid7" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                     <source src="../../img/eicw/eicw-vid7-light.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
@@ -509,7 +509,7 @@
                     </div>
                   </div>
 
-                  <video id="eicw-vid8" autoplay muted loop playsinline width="100%" class="column-vid">
+                  <video id="eicw-vid8" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                     <source src="../../img/eicw/eicw-vid8-light.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
