--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -210,7 +210,7 @@
                 </figcaption>
               </div>
 
-              <video id="eicw-vid1" autoplay muted loop playsinline width="100%" class="column-vid">
+              <video id="eicw-vid1" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
                 <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
