2025-01 Cumulative Update for Version 2501 (4.4.30)

--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -56,8 +56,8 @@
                 <ul id="nav">
                   <li><a href="../../index.html">Home</a></li>
                   <li><a href="../../about.html">About</a></li>
-                  <li class="active"><a href="../../works-by-nrfz.html">Works By NRFZ</a></li>
-                  <li><a href="../../blog.html">Blog</a></li>
+                  <li><a href="../../works-by-nrfz.html">Works By NRFZ</a></li>
+                  <li class="active"><a href="../../blog.html">Blog</a></li>
                   <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
                         class="fa-solid fa-moon"></i></button>
                   </li>
@@ -86,7 +86,7 @@
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html"> Home</a>
                 </li>
-                <li class="breadcrumb-item"><a href="../../works-by-nrfz.html"> Works By NRFZ</a>
+                <li class="breadcrumb-item"><a href="../../works-by-nrfz.html"> Blog </a>
                 </li>
               </ol>
             </nav>
@@ -129,23 +129,6 @@
       <div class="row h-100 align-items-center">
       </div>
     </div>
-  </section>
-
-  <section class="jumplists">
-    <div class="wbnrfz_details text-center">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="300ms">
-            <div class="info justify-content-center">
-              <a class="btn wbnrfz_btn" href="#ci-img">Changes &
-                Improvements over the Current Version</a>
-              <a class="btn wbnrfz_btn" href="#eia-img">Existing Icon Assets</a>
-              <a class="btn wbnrfz_btn" href="#dsb-img">Design Standards Brainstorm</a>
-              <a class="btn wbnrfz_btn" href="#otb">Other Blog Posts</a>
-            </div>
-          </div>
-        </div>
-      </div>
   </section>
 
   <section class="about-me-summ section-padding-80-0 clearfix">
@@ -691,7 +674,7 @@
   </section>
 
   
-  <section class="ftco-section-blog" id="otb">
+  <section class="ftco-section-otb" id="otb">
     <div class="container container-xxl container-blogList">
         <div class="row">
             <div class="col-12 col-sm-4 col-md-4 col-lg-4">
