--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -67,6 +67,7 @@
             </div>
           </nav>
         </div>
+        <div class="progress-bar" id="scrollIndicator"></div>
       </div>
     </div>
   </header>
@@ -236,11 +237,11 @@
                         <li><a href="#">5</a></li>  -->
 
               <!-- <li><a href="#">&gt;</a></li> -->
-            </ul>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 
 
@@ -441,6 +442,7 @@
 
   <script src="../../js/copy-to-clipboard.js"></script>
 
+  <script src="../../js/scroll.js"></script>
 
 </body>
 
