--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -67,6 +67,7 @@
             </div>
           </nav>
         </div>
+        <div class="progress-bar" id="scrollIndicator"></div>
       </div>
     </div>
   </header>
@@ -827,6 +828,8 @@
   <script src="../../js/portfolio-comp.js"></script>
 
   <script src="../../js/copy-to-clipboard.js"></script>
+
+  <script src="../../js/scroll.js"></script>
 
 
 </body>
