--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -587,20 +587,20 @@
               </div>
 
               <!-- Wayfinding Signs -->
-              <!-- <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                   Wayfinding Signs</h2>
                 <div class="banner-eicw">
-                  <a href="../../img/eicw/U-C.png" id="ls" class="portfolio-img">
-                    <img src="../../img/eicw/U-C.png" id="ls-img" class="img-fluid" alt="ls">
+                  <a href="../../img/eicw/wf1-light.png" id="wf1" class="portfolio-img">
+                    <img src="../../img/eicw/wf1-light.png" id="wf1-img" class="img-fluid" alt="wf1">
                   </a>
                 </div>
                 <div class="banner-eicw">
-                  <a href="../../img/eicw/U-C.png" id="ls" class="portfolio-img">
-                    <img src="../../img/eicw/U-C.png" id="ls-img" class="img-fluid" alt="ls">
+                  <a href="../../img/eicw/wf2-light.png" id="wf2" class="portfolio-img">
+                    <img src="../../img/eicw/wf2-light.png" id="wf2-img" class="img-fluid" alt="wf2">
                   </a>
                 </div>
-              </div> -->
+              </div>
 
             </div>
           </div>
@@ -677,6 +677,36 @@
                 <div class="banner-eicw">
                   <a href="../../img/eicw/lsbann2-light.png" id="lsbann2" class="portfolio-img">
                     <img src="../../img/eicw/lsbann2-light.png" id="lsbann2-img" class="img-fluid" alt="lsbann2">
+                  </a>
+                </div>
+                <hr>
+              </div>
+
+              <!-- Exit Directories -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Exit Directories</h2>
+
+                <div class="row">
+                  <div class="column column-pic">
+                    <figcaption>
+                      <a href="../../img/eicw/ed-light.png" id="ed" class="portfolio-img ">
+                        <img src="../../img/eicw/ed-light.png" id="ed-img" class="img-fluid cp-img" alt="ed">
+                      </a>
+                    </figcaption>
+                  </div>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/edann1-light.png" id="edann1" class="portfolio-img">
+                    <img src="../../img/eicw/edann1-light.png" id="edann1-img" class="img-fluid" alt="edann1">
+                  </a>
+                  <hr>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/edann2-light.png" id="edann2" class="portfolio-img">
+                    <img src="../../img/eicw/edann2-light.png" id="edann2-img" class="img-fluid" alt="edann2">
                   </a>
                 </div>
                 <hr>
