--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -134,7 +134,7 @@
 
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details">
-      <div class="container">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
@@ -214,7 +214,7 @@
 
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details">
-      <div class="container">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
 
           <!-- Way Out Icon -->
@@ -547,7 +547,7 @@
 
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details">
-      <div class="container">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
@@ -609,7 +609,6 @@
     </div>
   </section>
 
-
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="dsb-img"
     style="background-image: url(../../img/eicw/eia-light.png)">
     <div class="container h-100">
@@ -624,7 +623,7 @@
 
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
     <div class="wbnrfz_details">
-      <div class="container">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
@@ -712,11 +711,89 @@
                 <hr>
               </div>
 
+              <!-- Totem Signs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Totem Signs</h2>
+
+                <div class="row">
+                  <div class="column column-pic">
+                    <figcaption>
+                      <a href="../../img/eicw/ts-light.png" id="ts" class="portfolio-img ">
+                        <img src="../../img/eicw/ts-light.png" id="ts-img" class="img-fluid cp-img" alt="ts">
+                      </a>
+                    </figcaption>
+                  </div>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/tsann1-light.png" id="tsann1" class="portfolio-img">
+                    <img src="../../img/eicw/tsann1-light.png" id="tsann1-img" class="img-fluid" alt="tsann1">
+                  </a>
+                  <hr>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/tsann2-light.png" id="tsann2" class="portfolio-img">
+                    <img src="../../img/eicw/tsann2-light.png" id="tsann2-img" class="img-fluid" alt="tsann2">
+                  </a>
+                </div>
+                <hr>
+              </div>
+
+              <!-- Overhead Signs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Overhead Signs</h2>
+
+                <div class="row">
+                  <div class="column column-pic">
+                    <figcaption>
+                      <a href="../../img/eicw/os-light.png" id="os" class="portfolio-img ">
+                        <img src="../../img/eicw/os-light.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      </a>
+                    </figcaption>
+                  </div>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/osann1-light.png" id="osann1" class="portfolio-img">
+                    <img src="../../img/eicw/osann1-light.png" id="osann1-img" class="img-fluid" alt="osann1">
+                  </a>
+                  <hr>
+                </div>
+              </div>
+
+              <!-- Customized Signages/UIs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Customized Signages/UIs</h2>
+
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/cs-light.png" id="cs" class="portfolio-img">
+                    <img src="../../img/eicw/cs-light.png" id="cs-img" class="img-fluid" alt="cs">
+                  </a>
+                  <hr>
+                </div>
+
+                <!-- Unused Designs -->
+                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                  <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                    Unused Designs</h2>
+
+                  <div class="banner-eicw">
+                    <a href="../../img/eicw/ud-light.png" id="ud" class="portfolio-img">
+                      <img src="../../img/eicw/ud-light.png" id="ud-img" class="img-fluid" alt="ud">
+                    </a>
+                    <hr>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -754,7 +831,6 @@
           <ul>
             <li class="active"><span>1</span></li>
             <li><a href="eicw-interactive-2.html">2</a></li>
-            <!-- <li><a href="#">3</a></li> -->
             <li><a href="eicw-interactive-2.html">&gt;</a></li>
           </ul>
         </div>
