--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -290,137 +290,7 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-
-
-
-  <!-- Dark Mode Functionality for Individual Pages -->
-  <script>
-    // Check localStorage for dark mode preference
-    if (localStorage.getItem('dark-mode') === 'enabled') {
-      document.body.classList.add('dark-mode');
-      updateHrefForDarkMode();
-    }
-
-    const toggleButton = document.getElementById('dark-mode-toggle');
-    toggleButton.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-      // Save the preference in localStorage
-      if (document.body.classList.contains('dark-mode')) {
-        localStorage.setItem('dark-mode', 'enabled');
-      } else {
-        localStorage.setItem('dark-mode', 'disabled');
-      }
-      updateHrefForDarkMode();
-    });
-
-    function updateHrefForDarkMode() {
-      /* Banners */
-      const coverSect = document.getElementById('cv-img');
-      const iuSect = document.getElementById('iu-img');
-
-      /* Images */
-      const lb_link = document.getElementById('lb1');
-      const lb_img = document.getElementById('lb1-img');
-
-      // const pl_link = document.getElementById('pl');
-      // const pl_img = document.getElementById('pl-img');
-
-      // const wo1_link = document.getElementById('wo1');
-      // const wo1_img = document.getElementById('wo1-img');
-
-      // const wo2_link = document.getElementById('wo2');
-      // const wo2_img = document.getElementById('wo2-img');
-
-      // const exit_link = document.getElementById('exit');
-      // const exit_img = document.getElementById('exit-img');
-
-      // const lift1_link = document.getElementById('lift1');
-      // const lift1_img = document.getElementById('lift1-img');
-
-      // const lift2_link = document.getElementById('lift2');
-      // const lift2_img = document.getElementById('lift2-img');
-
-      /* Videos */
-      // const vid1 = document.getElementById('eicw-vid1');
-      // const vid1Source = vid1.querySelector('source');
-
-      // const vid2 = document.getElementById('eicw-vid2');
-      // const vid2Source = vid2.querySelector('source');
-
-      // const vid3 = document.getElementById('eicw-vid3');
-      // const vid3Source = vid3.querySelector('source');
-
-      const isDarkMode = document.body.classList.contains('dark-mode');
-
-      if (isDarkMode) {
-        /* Banners */
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-dark.png')";
-        iuSect.style.backgroundImage = "url('../../img/eicw/iu-dark.png')";
-
-        /* Images */
-        lb_link.href = '../../img/eicw/labels-dark1.png';
-        lb_img.src = '../../img/eicw/labels-dark1.png';
-
-        // pl_link.href = '../../img/eicw/palettes-dark.png';
-        // pl_img.src = '../../img/eicw/palettes-dark.png';
-
-        // wo1_link.href = '../../img/eicw/wo1-dark.png';
-        // wo1_img.src = '../../img/eicw/wo1-dark.png';
-
-        // wo2_link.href = '../../img/eicw/wo2-dark.png';
-        // wo2_img.src = '../../img/eicw/wo2-dark.png';
-
-        // exit_link.href = '../../img/eicw/exit-dark.png';
-        // exit_img.src = '../../img/eicw/exit-dark.png';
-
-        // lift1_link.href = '../../img/eicw/lift-dark1.png';
-        // lift1_img.src = '../../img/eicw/lift-dark1.png';
-
-        // lift2_link.href = '../../img/eicw/lift-dark2.png';
-        // lift2_img.src = '../../img/eicw/lift-dark2.png';
-
-        /* Videos */
-        // vid1Source.src = '../../img/eicw/eicw-vid1-dark.mp4';
-        // vid2Source.src = '../../img/eicw/eicw-vid2-dark.mp4';
-        // vid3Source.src = '../../img/eicw/eicw-vid3-dark.mp4';
-
-      } else {
-        /* Banners */
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-light.png')";
-        iuSect.style.backgroundImage = "url('../../img/eicw/iu-light.png')";
-
-        /* Images */
-        lb_link.href = '../../img/eicw/labels-light1.png';
-        lb_img.src = '../../img/eicw/labels-light1.png';
-
-        // pl_link.href = '../../img/eicw/palettes-light.png';
-        // pl_img.src = '../../img/eicw/palettes-light.png';
-
-        // wo1_link.href = '../../img/eicw/wo1-light.png';
-        // wo1_img.src = '../../img/eicw/wo1-light.png';
-
-        // wo2_link.href = '../../img/eicw/wo2-light.png';
-        // wo2_img.src = '../../img/eicw/wo2-light.png';
-
-        // exit_link.href = '../../img/eicw/exit-light.png';
-        // exit_img.src = '../../img/eicw/exit-light.png';
-
-        // lift1_link.href = '../../img/eicw/lift-light1.png';
-        // lift1_img.src = '../../img/eicw/lift-light1.png';
-
-        // lift2_link.href = '../../img/eicw/lift-light2.png';
-        // lift2_img.src = '../../img/eicw/lift-light2.png';
-
-        /* Videos */
-        // vid1Source.src = '../../img/eicw/eicw-vid1-light.mp4';
-        // vid2Source.src = '../../img/eicw/eicw-vid2-light.mp4';
-        // vid3Source.src = '../../img/eicw/eicw-vid3-light.mp4';
-      }
-      // vid1.load();
-      // vid2.load();
-      // vid3.load();
-    }
-  </script>
+  <script src="js/eicw-2.js"></script>
 
   <script src="../../js/jquery.min.js"></script>
 
