--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -56,8 +56,8 @@
                 <ul id="nav">
                   <li><a href="../../index.html">Home</a></li>
                   <li><a href="../../about.html">About</a></li>
-                  <li class="active"><a href="../../works-by-nrfz.html">Works By NRFZ</a></li>
-                  <li><a href="../../blog.html">Blog</a></li>
+                  <li><a href="../../works-by-nrfz.html">Works By NRFZ</a></li>
+                  <li class="active"><a href="../../blog.html">Blog</a></li>
                   <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
                         class="fa-solid fa-moon"></i></button>
                   </li>
@@ -176,55 +176,180 @@
   </section>
 
   <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="details_info">
-          <div class="row justify-content-center">
-            <div class="col-lg-12">
-              <div class="info justify-content-center">
+    <div class="wbnrfz_details">
+      <div class="container container-mobile">
+        <div class="row justify-content-center">
 
-                <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Labels</h2>
-                <p style="text-align: left;">From feedbacks on the ground, many commuters didn't understand what "A with
-                  a Dash below" the "Gate"
-                  meant. Those descriptions actually refers to the Platforms and Exits respectively. To make it clearer,
-                  an 'Exit'/'Platform' label has been added, and it is now mandatory to be added. Current
-                  implementations
-                  saw the labels at the top for Exits as temporary (stickered on at a later part, and not integrated
-                  into the
-                  design.)
-                </p>
+          <!-- Labels -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Labels</h2>
+                    <p style="text-align: left;">From feedbacks on the ground, many commuters didn't understand what
+                      "A with
+                      a Dash below" the "Gate"
+                      meant. Those descriptions actually refers to the Platforms and Exits respectively. To make it
+                      clearer,
+                      an 'Exit'/'Platform' label has been added, and it is now mandatory to be added. Current
+                      implementations
+                      saw the labels at the top for Exits as temporary (stickered on at a later part, and not
+                      integrated
+                      into the
+                      design.)
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/lb1-light.png" id="lb1" class="portfolio-img ">
+                          <img src="../../img/eicw/lb1-light.png" id="lb1-img" class="img-fluid cp-img" alt="lb1">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/lb2-light.png" id="lb2" class="portfolio-img">
+                          <img src="../../img/eicw/lb2-light.png" id="lb2-img" class="img-fluid cp-img" alt="lb2">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <!-- <video id="eicw-vid1" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                        muted loop playsinline width="100%" class="column-vid">
+                        <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
+                    </div> -->
+
+                  </div>
+                </div>
               </div>
-
-              <div class="column column-pic">
-                <figcaption>
-                  <a href="../../img/eicw/lb1-light.png" id="lb1" class="portfolio-img ">
-                    <img src="../../img/eicw/lb1-light.png" id="lb1-img" class="img-fluid cp-img" alt="lb1">
-                  </a>
-                </figcaption>
-              </div>
-
-              <div class="column column-pic">
-                <figcaption>
-                  <a href="../../img/eicw/lb2-light.png" id="lb2" class="portfolio-img">
-                    <img src="../../img/eicw/lb2-light.png" id="lb2-img" class="img-fluid cp-img" alt="lb2">
-                  </a>
-                </figcaption>
-              </div>
-
-              <!--  <video id="eicw-vid1" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop playsinline width="100%" class="column-vid">
-                <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video> -->
-
+              <hr>
             </div>
+          </div>
+
+          <!-- Iconography -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Iconography</h2>
+                    <p style="text-align: left;">It's time to let the Dark Green Background retire. Previously used on
+                      backgrounds of Station Name signages, it progressively got replaced with a darker shade of Grey.
+                      The current implementation uses a combination of both Dark Green and Dark Grey, hence I have
+                      decided to only stick with just the Dark Grey colour across all signages.
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ic1-light.png" id="ic1" class="portfolio-img ">
+                          <img src="../../img/eicw/ic1-light.png" id="ic1-img" class="img-fluid cp-img" alt="ic1">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ic2-light.png" id="ic2" class="portfolio-img">
+                          <img src="../../img/eicw/ic2-light.png" id="ic2-img" class="img-fluid cp-img" alt="ic2">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ic3-light.png" id="ic3" class="portfolio-img">
+                          <img src="../../img/eicw/ic3-light.png" id="ic3-img" class="img-fluid cp-img" alt="ic3">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <video id="eicw2-vid1" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="../../img/eicw/eicw2-vid1-light.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+
+          <!-- Station Names on Exit -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Station Names on Exit</h2>
+                    <p style="text-align: left;">The Street Names on the Overhead signages were removed in
+                      the New Wayfinding System. While it is understood that the
+                      removal of the Street Names was to make the signages more
+                      simplified, I believe there is a better way to still fit them in the
+                      new system.
+                      <br><br>
+                      The Street Names will appear when there are only 1 or 2 exits
+                      ahead. For multiple exits, the same principle currently being
+                      implemented will apply here. To make up for the loss of
+                      information, a separate wall Vertical Wall Signage will be
+                      pasted instead.
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/sne1-light.png" id="sne1" class="portfolio-img">
+                          <img src="../../img/eicw/sne1-light.png" id="sne1-img" class="img-fluid cp-img" alt="sne1">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/sne2-light.png" id="sne2" class="portfolio-img">
+                          <img src="../../img/eicw/sne2-light.png" id="sne2-img" class="img-fluid cp-img" alt="sne2">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/sne3-light.png" id="sne3" class="portfolio-img">
+                          <img src="../../img/eicw/sne3-light.png" id="sne3-img" class="img-fluid cp-img" alt="sne3">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="../../img/eicw/eicw2-vid2-light.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <hr>
           </div>
         </div>
 
 
-        <hr>
-
-
       </div>
+    </div>
     </div>
   </section>
 
@@ -254,7 +379,8 @@
                     to do so, it requires time, manpower, and careful planning. Compared to metro systems overseas, some
                     signages
                     also differ slightly, such as those of Taipei Metro and MTR."</blockquote>
-                  <p>Hence this microsite could be useful in diving in and exploring different ideas that can be used to make
+                  <p>Hence this microsite could be useful in diving in and exploring different ideas that can be used to
+                    make
                     the wayfinding
                     system better. Whether the ideas worked in real-life or not, is a different story. Well, if you have
                     not tried, you will
