2025-02 Cumulative Update for Version 2501 (4.4.40)

--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -75,12 +75,6 @@
   <section class="wbnrfz-summ-micro clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container">
-
-        <div class="alert alert-info alert-dismissible fade show" role="alert">
-          <strong>Hello!</strong> This Microsite is actively being developed! Some features may not work as intended.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-
         <div class="col-lg-12">
           <div class="main-title">
             <nav aria-label="breadcrumb">
@@ -345,17 +339,210 @@
             </div>
             <hr>
           </div>
+
         </div>
-
-
       </div>
     </div>
     </div>
   </section>
 
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="ie-img"
+    style="background-image: url(../../img/eicw/ie-light.png)">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
+          <div class="breadcrumb-content text-center">
+            <h2 class="page-title">Implementation Explorations</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
+    <div class="wbnrfz_details">
+      <div class="container container-mobile">
+        <div class="row justify-content-center">
+
+          <!-- Exit Prominence -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Exit Prominence</h2>
+                    <p style="text-align: left;">The implementation of the Main Exit Sign in Punggol Coast gives us a
+                      glimpse of how they would label exits. Yes, it's just putting the Exit
+                      Numbers there and calling it a day. The rest are all empty spaces.
+                      Hence I proposed adding on more icons on the signage - just the icons.
+                      If Commuters need more details, they can refer to the Signage on the
+                      Wall.
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ep1-light.png" id="ep1" class="portfolio-img ">
+                          <img src="../../img/eicw/ep1-light.png" id="ep1-img" class="img-fluid cp-img" alt="ep1">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ep2-light.png" id="ep2" class="portfolio-img">
+                          <img src="../../img/eicw/ep2-light.png" id="ep2-img" class="img-fluid cp-img" alt="ep2">
+                        </a>
+                      </figcaption>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <hr>
+            </div>
+          </div>
+
+          <!-- Modernizing Old Signages (1) -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (1)</h2>
+                    <p style="text-align: left;">With LTA's vision of simplifying overhead
+                      signs they removed useful information like
+                      Street Names. Same concept as previously
+                      mentioned, to compensate for the loss of
+                      major information, on the overhead signage,
+                      a separate wall Vertical Wall Signage will be
+                      pasted instead.
+                      <br><br>
+                      For Platform Directions, I utilized the Floor
+                      Indicator Signage, while the Street Name
+                      information has been integrated in the
+                      summarized Exit Directory as shown earlier,
+                      into the lift signage.
+                      <br><br>
+                      My end goal for doing so is to offload the
+                      information from the Overhead Signage to ta
+                      more strategic place, such as the empty wall
+                      spaces.
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ms1-light.png" id="ms1" class="portfolio-img ">
+                          <img src="../../img/eicw/ms1-light.png" id="ms1-img" class="img-fluid cp-img" alt="ms1">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ms2-light.png" id="ms2" class="portfolio-img">
+                          <img src="../../img/eicw/ms2-light.png" id="ms2-img" class="img-fluid cp-img" alt="ms2">
+                        </a>
+                      </figcaption>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+
+          <!-- Modernizing Old Signages (2) -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
+
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (2)</h2>
+                    <p style="text-align: left;">Some signages got stuck in time. It is either
+                      those signages have been forgotten, or it is
+                      simply not feasible to constantly update,
+                      hence it was lat updated when Circle Line
+                      Stage 2 commenced service. It has not
+                      gotten an update ever since.
+                      <br><br>
+                      I considered giving the signages a fresh
+                      redesign, while adding on the newer lines
+                      but I felt that it could get too cluttered.
+                      Hence, I've decided to list down the North
+                      East Line's Key Interchanges instead. It will
+                      be easier to update in the long run.
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ms3-light.png" id="ms3" class="portfolio-img">
+                          <img src="../../img/eicw/ms3-light.png" id="ms3-img" class="img-fluid cp-img" alt="ms3">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ms4-light.png" id="ms4" class="portfolio-img">
+                          <img src="../../img/eicw/ms4-light.png" id="ms4-img" class="img-fluid cp-img" alt="ms4">
+                        </a>
+                      </figcaption>
+                    </div>
+
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/ms5-light.png" id="ms5" class="portfolio-img">
+                          <img src="../../img/eicw/ms5-light.png" id="ms5-img" class="img-fluid cp-img" alt="ms5">
+                        </a>
+                      </figcaption>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px; padding-top: 10px;">
+    <div class="wbnrfz_details">
+      <div class="container container-xxl">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Enhancements Overview -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Enhancements Overview</h2>
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/evo2-light.png" id="evo2" class="portfolio-img">
+                    <img src="../../img/eicw/evo2-light.png" id="evo2-img" class="img-fluid" alt="evo2">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    </div>
+  </section>
 
 
-  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 3px;">
+  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 3px; padding-top: 10px;">
     <div class="wbnrfz_details">
       <div class="container">
         <div class="row justify-content-center">
