2025-02 Cumulative Update for Version 2501 (4.4.40)

--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -134,10 +134,15 @@
               <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
                   download>First Edition</a></li>
             </ul>
-            <a class="btn wbnrfz_btn"
-              href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
-                class="fa-solid fa-external-link"></i>&nbsp; View in Google
-              Drive</a>
+            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                class="fa-solid fa-external-link"></i>&nbsp; View Handbooks</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item"
+                  href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing">in Google
+                  Drive</a></li>
+              <li><a class="dropdown-item" href="eicw/eicw-interactive.html">in
+                  Microsite Version</a></li>
+            </ul>
           </div>
         </div>
       </div>
