--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -135,7 +135,7 @@
                   download>First Edition</a></li>
             </ul>
             <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i
-                class="fa-solid fa-external-link"></i>&nbsp; View Handbooks</a>
+                class="fa-solid fa-external-link"></i>&nbsp; View Handbook</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item"
                   href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing">in Google
