--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -423,7 +423,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (1)</h2>
+                    <h2 class="mb-3 text-left" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (1)</h2>
                     <p style="text-align: left;">With LTA's vision of simplifying overhead
                       signs they removed useful information like
                       Street Names. Same concept as previously
@@ -474,7 +474,7 @@
                   <div class="col-lg-12">
                     <div class="info justify-content-center">
 
-                      <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (2)</h2>
+                      <h2 class="mb-3 text-left" style="font-size: 30px; font-weight:bold;">Modernizing Old Signages (2)</h2>
                       <p style="text-align: left;">Some signages got stuck in time. It is either
                         those signages have been forgotten, or it is
                         simply not feasible to constantly update,
