--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -128,7 +128,7 @@
 
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details">
-      <div class="container">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
