2025-02 Cumulative Update for Version 2501 (4.4.50)

--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -136,7 +136,7 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3" style="font-size: 30px; font-weight:bold;">Preface</h2>
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Preface</h2>
                   <p style="text-align: left;">The new Wayfinding system was first launched on the Thomson-East
                     Coast Line stations. It spots a new design
                     system, where the emphasis was mainly on iconographies, rather than pure texts. I for one, am a
@@ -218,7 +218,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Way Out Icon</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Way Out Icon</h2>
                     <p style="text-align: left;">The proposed new Way Out icon combines two elements: the Emergency Exit
                       Icon and the Exit Icon.
 
@@ -264,7 +264,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Exit Icon</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit Icon</h2>
                     <p style="text-align: left;">The proposed new Exit icon standardises the use of the 'Exit Border'
                       symbol for those using both numbers or alphabets. Currently, the Exit icons for numbers and
                       alphabets are labelled differently. 
@@ -300,7 +300,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Lift Icon</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Lift Icon</h2>
                     <p style="text-align: left;">The Lift Icon received a minor change. To maximise space, the Up and
                       Down arrows have been placed in the icon, and the inclusion of only one person in the lift icon. 
                       <br>
@@ -350,7 +350,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Lift Directory Sign</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Lift Directory Sign</h2>
                     <p style="text-align: left;">The Lift Directory sign has also received some minor updates. The floor
                       number has been brought back, and the 'You Are Here' icon removed and replaced with the colour
                       itself.
@@ -389,7 +389,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Exit Directory Sign</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit Directory Sign</h2>
                     <p style="text-align: left;">The Exit Directory received a minor change and addition. Previously,
                       the initial proposal was to arrange it by Exits, but that proved to be infeasible because
                       constant
@@ -452,7 +452,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Station Name Sign</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station Name Sign</h2>
                     <p style="text-align: left;">Currently, there are two variants to the Station Name signs. Those
                       earlier versions have a smaller station name, while
                       the latest ones are enlarged. The current enlarged texts are found on most TEL4 stations and
@@ -492,7 +492,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Station Exit Sign</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station Exit Sign</h2>
                     <p style="text-align: left;">Currently, there are three variants to the Station Exit signs. The
                       current version has the Exit Number and icons with a
                       grey base, another, with the Exit Name and Exit Letter Icon. The latest ones, only available at
