--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -136,7 +136,7 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: left;">Time to get more
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Time to get more
                     Experimental!</h2>
                   <p style="text-align: left;">This is a continuation from the <a href="eicw-interactive.html">First
                       Page</a> which focuses on
@@ -181,7 +181,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Labels</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Labels</h2>
                     <p style="text-align: left;">From feedbacks on the ground, many commuters didn't understand what
                       "A with
                       a Dash below" the "Gate"
@@ -234,7 +234,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Iconography</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Iconography</h2>
                     <p style="text-align: left;">It's time to let the Dark Green Background retire. Previously used on
                       backgrounds of Station Name signages, it progressively got replaced with a darker shade of Grey.
                       The current implementation uses a combination of both Dark Green and Dark Grey, hence I have
@@ -291,7 +291,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Station Names on Exit</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Station Names on Exit</h2>
                     <p style="text-align: left;">The Street Names on the Overhead signages were removed in
                       the New Wayfinding System. While it is understood that the
                       removal of the Street Names was to make the signages more
@@ -379,7 +379,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Exit Prominence</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Exit Prominence</h2>
                     <p style="text-align: left;">The implementation of the Main Exit Sign in Punggol Coast gives us a
                       glimpse of how they would label exits. Yes, it's just putting the Exit
                       Numbers there and calling it a day. The rest are all empty spaces.
@@ -423,7 +423,7 @@
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
 
-                    <h2 class="mb-3 text-left" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (1)</h2>
+                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold ;">Modernizing Old Signages (1)</h2>
                     <p style="text-align: left;">With LTA's vision of simplifying overhead
                       signs they removed useful information like
                       Street Names. Same concept as previously
@@ -474,7 +474,7 @@
                   <div class="col-lg-12">
                     <div class="info justify-content-center">
 
-                      <h2 class="mb-3 text-left" style="font-size: 30px; font-weight:bold;">Modernizing Old Signages (2)</h2>
+                      <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Modernizing Old Signages (2)</h2>
                       <p style="text-align: left;">Some signages got stuck in time. It is either
                         those signages have been forgotten, or it is
                         simply not feasible to constantly update,
@@ -540,7 +540,7 @@
 
               <!-- Enhancements Overview -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
-                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                   Enhancements Overview</h2>
                 <div class="banner-eicw">
                   <a href="../../img/eicw/evo2-light.png" id="evo2" class="portfolio-img">
@@ -568,7 +568,7 @@
               <!-- Postface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: left;">Postface</h2>
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Postface</h2>
                   <p style="text-align: left;">The different Brainstorming of Designs are a compilation of ideas from my
                     Train Rides over the years, ever since the
                     new Wayfinding System was introduced. You may notice many of the designs are catered for the Train's
@@ -671,7 +671,7 @@
                   </div>
                   <div class="desc">
                     <h3 style="font-size: 30px; font-weight: bold;">Nurafian Zulkifli</h3>
-                    <p>Passionate about Technology and Designs - mainly UI Designs, Wayfinding and
+                    <p class="text-left">Passionate about Technology and Designs - mainly UI Designs, Wayfinding and
                       Signage Designs.<br><br> I also
                       enjoy replicating stuffs that interests me.</p>
                   </div>
