--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -23,6 +23,16 @@
 
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/glightbox.min.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WN76281P3Q');
+  </script>
 </head>
 
 <body>
