--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-breakpoints.css">
-  <link rel="stylesheet" href="css/dark-mode.css">
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../../css/dark-mode.css">
 
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
+  <link rel="stylesheet" href="../../css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="../../css/glightbox.min.css">
 </head>
 
 <body>
@@ -719,34 +719,34 @@
     </div>
   </footer>
 
-  <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+  <script type="text/javascript" id="cookiebanner" src="../../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
     data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-  <script src="js/eicw-js/eicw-2.js"></script>
+  <script src="../../js/eicw-js/eicw-2.js"></script>
 
-  <script src="js/jquery.min.js"></script>
+  <script src="../../js/jquery.min.js"></script>
 
-  <script src="js/popper.min.js"></script>
+  <script src="../../js/popper.min.js"></script>
 
-  <script src="js/bootstrap.min.js"></script>
+  <script src="../../js/bootstrap.min.js"></script>
 
-  <script src="js/pw.bundle.js"></script>
+  <script src="../../js/pw.bundle.js"></script>
 
-  <script src="js/default-assets/active.js"></script>
+  <script src="../../js/default-assets/active.js"></script>
 
-  <script src="js/swiper-bundle.min.js"></script>
+  <script src="../../js/swiper-bundle.min.js"></script>
 
-  <script src="js/glightbox.min.js"></script>
+  <script src="../../js/glightbox.min.js"></script>
 
-  <script src="js/isotope.pkgd.min.js"></script>
+  <script src="../../js/isotope.pkgd.min.js"></script>
 
-  <script src="js/portfolio-comp.js"></script>
+  <script src="../../js/portfolio-comp.js"></script>
 
-  <script src="js/copy-to-clipboard.js"></script>
+  <script src="../../js/copy-to-clipboard.js"></script>
 
-  <script src="js/scroll.js"></script>
+  <script src="../../js/scroll.js"></script>
 
 </body>
 
